--- a/public/es/meet-the-board/index.html
+++ b/public/es/meet-the-board/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
-   <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon.ico">
+   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <meta property="og:title" content="Conozca la Junta" />
 <meta property="og:description" content="Miembros Activos de la Junta 2023-2024" />
 <meta property="og:type" content="article" />
