--- a/public/es/documents/index.html
+++ b/public/es/documents/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
-   <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon.ico">
+   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <meta property="og:title" content="Documentos" />
 <meta property="og:description" content="Descargue los documentos necesarios a continuación." />
 <meta property="og:type" content="article" />
