--- a/public/es/documents/index.html
+++ b/public/es/documents/index.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
+
 <meta property="og:title" content="Documentos" />
 <meta property="og:description" content="Descargue los documentos necesarios a continuación." />
 <meta property="og:type" content="article" />
@@ -155,5 +157,8 @@ CAMBRIDGE VILLAGE - Manual de Normas Arquitectónicas y Formulario de Solicitud<
 <script src="/js/breakpoints.min.js"></script>
 <script src="/js/util.js"></script>
 <script src="/js/main.js"></script>
-</body>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe.min.js"></script>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe-ui-default.min.js"></script></body>
 </html>
