--- a/public/es/meet-the-board/index.html
+++ b/public/es/meet-the-board/index.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
+
 <meta property="og:title" content="Conozca la Junta" />
 <meta property="og:description" content="Miembros Activos de la Junta 2023-2024" />
 <meta property="og:type" content="article" />
@@ -184,5 +186,8 @@
 <script src="/js/breakpoints.min.js"></script>
 <script src="/js/util.js"></script>
 <script src="/js/main.js"></script>
-</body>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe.min.js"></script>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe-ui-default.min.js"></script></body>
 </html>
