--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
+
 <meta property="og:title" content="Home" />
 <meta property="og:description" content="A Home Owner Association web site to facilitate events and communication for the neighborhood" />
 <meta property="og:type" content="website" />
@@ -127,6 +129,20 @@
     </div>
 </section>
 </div>
+                <div class="row">
+            <section class="col-6 col-12-narrower">
+    <div class="box post">
+        <a href="/posts/fourth/" class="image left"><img src="/" alt="" /></a>
+        <div class="inner">
+            <h3><a href="/posts/fourth/">The Fourth Thing</a></h3>
+            
+            <p>
+                 
+            </p>
+        </div>
+    </div>
+</section>
+
     </div>
 </section>
 <section id="cta" class="wrapper style3">
@@ -197,5 +213,8 @@
 <script src="/js/breakpoints.min.js"></script>
 <script src="/js/util.js"></script>
 <script src="/js/main.js"></script>
-</body>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe.min.js"></script>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe-ui-default.min.js"></script></body>
 </html>
