--- a/public/es/index.html
+++ b/public/es/index.html
@@ -8,6 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
+
 <meta property="og:title" content="Inicio" />
 <meta property="og:description" content="Un sitio web de la Asociación de Propietarios para facilitar eventos y comunicación para el vecindario" />
 <meta property="og:type" content="website" />
@@ -195,5 +197,8 @@
 <script src="/js/breakpoints.min.js"></script>
 <script src="/js/util.js"></script>
 <script src="/js/main.js"></script>
-</body>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe.min.js"></script>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe-ui-default.min.js"></script></body>
 </html>
