--- a/public/meet-the-board/index.html
+++ b/public/meet-the-board/index.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
+
 <meta property="og:title" content="Meet the Board" />
 <meta property="og:description" content="2023-2024 Active Board Members" />
 <meta property="og:type" content="article" />
@@ -186,5 +188,8 @@
 <script src="/js/breakpoints.min.js"></script>
 <script src="/js/util.js"></script>
 <script src="/js/main.js"></script>
-</body>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe.min.js"></script>
+ 
+ <script src="https://unpkg.com/photoswipe/dist/photoswipe-ui-default.min.js"></script></body>
 </html>
