add historical images

--- a/public/es/index.html
+++ b/public/es/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-   <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
+   
 
 <meta property="og:title" content="Inicio" />
 <meta property="og:description" content="Un sitio web de la Asociación de Propietarios para facilitar eventos y comunicación para el vecindario" />
@@ -187,8 +187,8 @@
             <li>Made with 💖 for the neighborhood</a>
         </ul>
         <ul>
-            <li>👉Website issues? Contact: <a href="mailto: support@cambridgevillagehoa.com">Support</a>👈
-            </li>
+            👉 Website issues? Contact: <a href="mailto: support@cambridgevillagehoa.com"><strong>Support</strong></a> 👈
+            
         </ul>
     </div>
 </div></div><script src="/js/jquery.min.js"></script>
@@ -196,9 +196,5 @@
 <script src="/js/browser.min.js"></script>
 <script src="/js/breakpoints.min.js"></script>
 <script src="/js/util.js"></script>
-<script src="/js/main.js"></script>
- 
- <script src="https://unpkg.com/photoswipe/dist/photoswipe.min.js"></script>
- 
- <script src="https://unpkg.com/photoswipe/dist/photoswipe-ui-default.min.js"></script></body>
+<script src="/js/main.js"></script></body>
 </html>
