fix download documents

--- a/public/es/documents/index.html
+++ b/public/es/documents/index.html
@@ -7,8 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-   
-
 <meta property="og:title" content="Documentos" />
 <meta property="og:description" content="Descargue los documentos necesarios a continuación." />
 <meta property="og:type" content="article" />
@@ -76,16 +74,13 @@
 </ul>
 
 </header><h3 id="estatutos-de-la-hoa">Estatutos de la HOA</h3>
-<p><a href="/images/DCR.pdf">
-<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" width="2%" />
+<p><a href="/images/DCR.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" style="width: 20px;">
 CAMBRIDGE VILLAGE - Estatutos</a></p>
 <h3 id="declaración-de-convenios-condiciones-y-restricciones">Declaración de Convenios, Condiciones y Restricciones</h3>
-<p><a href="/images/ByLaws.pdf">
-<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" width="2%" />
+<p><a href="/images/ByLaws.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" style="width: 20px;">
 CAMBRIDGE VILLAGE - Declaración de Convenios, Condiciones y Restricciones</a></p>
 <h3 id="guía-de-arquitectura-y-formulario-de-solicitud">Guía de Arquitectura y Formulario de Solicitud</h3>
-<p><a href="/images/ArchitecturalGuidelinesAndForm.pdf">
-<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" width="2%" />
+<p><a href="/images/ArchitecturalGuidelinesAndForm.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" style="width: 20px;">
 CAMBRIDGE VILLAGE - Manual de Normas Arquitectónicas y Formulario de Solicitud</a></p>
 <h4 id="alguna-pregunta-o-preocupación">¿Alguna pregunta o preocupación?</h4>
 <p>Por favor, contacte con la junta:
