--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -76,28 +76,13 @@
 </ul>
 
 </header><h3 id="hoa-by-laws">HOA By Laws</h3>
-<p><a href="/images/DCR.pdf">
-
-<a href="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" target="_blank">
-    <img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Board Member" width="2%" />
-</a>
-
-CAMBRIDGE VILLAGE - By Laws</a></p>
+<p><a href="/images/DCR.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Download" style="width: 20px;">
+ CAMBRIDGE VILLAGE - By Laws</a></p>
 <h3 id="declaration-of-covenants-conditions-and-restrictions">Declaration of Covenants, Conditions and Restrictions</h3>
-<p><a href="/images/ByLaws.pdf">
-
-<a href="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" target="_blank">
-    <img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Board Member" width="2%" />
-</a>
-
+<p><a href="/images/ByLaws.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Board Member" style="width: 20px;">
 CAMBRIDGE VILLAGE - Declaration of Covenants, Conditions and Restrictions</a></p>
 <h3 id="architectural-guidelines-and-request-form">Architectural Guidelines and Request Form</h3>
-<p><a href="/images/ArchitecturalGuidelinesAndForm.pdf">
-
-<a href="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" target="_blank">
-    <img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Board Member" width="2%" />
-</a>
-
+<p><a href="/images/ArchitecturalGuidelinesAndForm.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Board Member" style="width: 20px;">
 CAMBRIDGE VILLAGE - Architectural Standards Manual and Request Form</a></p>
 <h4 id="any-questions-or-concerns">Any questions or concerns?</h4>
 <p>Please contact the board:
