--- a/public/es/meet-the-board/index.html
+++ b/public/es/meet-the-board/index.html
@@ -7,8 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-   
-
 <meta property="og:title" content="Conozca la Junta" />
 <meta property="og:description" content="Miembros Activos de la Junta 2023-2024" />
 <meta property="og:type" content="article" />
@@ -89,7 +87,11 @@
 
 </header><h3 id="presidente">Presidente</h3>
 
-<img src="/images/president2324.jpeg" alt="Miembro de la Junta" width="20%" />
+
+<a href="/images/president2324.jpeg" target="_blank">
+    <img src="/images/president2324.jpeg" alt="Miembro de la Junta" width="20%" />
+</a>
+
 
 <h4 id="dwayne-m">Dwayne M.</h4>
 <p>Correo de contacto: <a href="mailto:president@cambridgevillagehoa.com">president@cambridgevillagehoa.com</a></p>
@@ -97,13 +99,21 @@
 <!-- raw HTML omitted -->
 <h3 id="secretario">Secretario</h3>
 
-<img src="/images/ebonyG.jpg" alt="Miembro de la Junta" width="20%" />
+
+<a href="/images/ebonyG.jpg" target="_blank">
+    <img src="/images/ebonyG.jpg" alt="Miembro de la Junta" width="20%" />
+</a>
+
 
 <h4 id="ebony-g">Ebony G.</h4>
 <p>Correo de contacto: <a href="mailto:secretary@cambridgevillagehoa.com">secretary@cambridgevillagehoa.com</a></p>
 <h3 id="tesorero">Tesorero</h3>
 
-<img src="/images/woseneT.jpg" alt="Miembro de la Junta" width="20%" />
+
+<a href="/images/woseneT.jpg" target="_blank">
+    <img src="/images/woseneT.jpg" alt="Miembro de la Junta" width="20%" />
+</a>
+
 
 <h4 id="wosene-s">Wosene S.</h4>
 <p>Correo de contacto: <a href="mailto:treasurer@cambridgevillagehoa.com">treasurer@cambridgevillagehoa.com</a></p>
