--- a/public/es/index.html
+++ b/public/es/index.html
@@ -51,8 +51,6 @@
                     <a href="/es/posts/">Eventos Comunitarios</a>
                 <li class="">
                     <a href="/es/meet-the-board/">Conozca la Junta</a>
-                <li class="">
-                    <a href="/es/faq/">Preguntas Frecuentes</a>
         </ul>
     </nav>
 </div>
@@ -197,13 +195,14 @@ Nuestra Señal A lo largo de los Años
       text-decoration: underline;
       color: #2BB2FC;
     }
+    
   </style>
   <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
   
   
   
   <div class="sib-form" style="text-align: center;
-           background-color: #EFF2F7;                                 ">
+           background-color: #fff;                                 ">
     <div id="sib-form-container" class="sib-form-container">
       <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
         <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
