--- a/public/es/documents/index.html
+++ b/public/es/documents/index.html
@@ -78,6 +78,9 @@
 </header><h3 id="estatutos-de-la-hoa">Estatutos de la HOA</h3>
 <p><a href="/images/ByLaws.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" style="width: 20px;">
 CAMBRIDGE VILLAGE - Estatutos</a></p>
+<h3 id="formulario-de-voluntariado-para-la-junta-de-la-hoa">Formulario de Voluntariado para la Junta de la HOA</h3>
+<p><a href="/images/HOA_Board_Volunteer_Form.docx"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Download" style="width: 20px;">
+ CAMBRIDGE VILLAGE - Formulario de Voluntariado</a></p>
 <h3 id="declaración-de-convenios-condiciones-y-restricciones">Declaración de Convenios, Condiciones y Restricciones</h3>
 <p><a href="/images/DCR.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Miembro de la Junta" style="width: 20px;">
 CAMBRIDGE VILLAGE - Declaración de Convenios, Condiciones y Restricciones</a></p>
