--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -78,6 +78,9 @@
 </header><h3 id="hoa-by-laws">HOA By Laws</h3>
 <p><a href="/images/ByLaws.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Download" style="width: 20px;">
  CAMBRIDGE VILLAGE - By Laws</a></p>
+<h3 id="hoa-board-volunteer-form">HOA Board Volunteer Form</h3>
+<p><a href="/images/HOA_Board_Volunteer_Form.docx"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Download" style="width: 20px;">
+ CAMBRIDGE VILLAGE - By Laws</a></p>
 <h3 id="declaration-of-covenants-conditions-and-restrictions">Declaration of Covenants, Conditions and Restrictions</h3>
 <p><a href="/images/DCR.pdf"><img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" alt="Board Member" style="width: 20px;">
 CAMBRIDGE VILLAGE - Declaration of Covenants, Conditions and Restrictions</a></p>
