--- a/public/es/faq/index.html
+++ b/public/es/faq/index.html
@@ -117,10 +117,10 @@ Se requiere la completación y envío del <strong>Manual de Normas Arquitectóni
 <div class="collapsible">
 
   <details open>
-    <summary>¿Necesito una aprobación para pintar mi casa?</summary>
+    <summary>¿Necesito una aprobación para el color de pintura para el exterior de la casa?</summary>
     <div class="collapsible-content">
       
-Sí
+Sí. Por favor, complete y envíe el Manual de Normas Arquitectónicas y Formulario de Solicitud (ARC) junto con una muestra del color de la pintura a la junta de la HOA. El Formulario ARC se encuentra en la <a href="/documents" style="color: #00008b;">página de Documentos</a>
 
     </div>
 
