--- a/public/es/index.html
+++ b/public/es/index.html
@@ -54,6 +54,8 @@
                 <li class="">
                     <a href="/es/documents/">Documentos</a>
                 <li class="">
+                    <a href="/es/newsletters/">Newsletters</a>
+                <li class="">
                     <a href="/es/faq/">Preguntas Frecuentes</a>
         </ul>
     </nav>
@@ -67,25 +69,32 @@
 <section class="wrapper style1">
     <div class="container">
         <div class="row gtr-200">
-                <section class="col-4 col-12-narrower">
+                <section class="col-3 col-12-narrower">
                     <div class="box highlight">
                         <i class="icon solid major fa-user-friends"></i>
                         <h3>Eventos Comunitarios</h3>
                         <p>Comidas compartidas, juegos y eventos de construcción comunitaria en nuestra calle sin salida. ¡Tendremos eventos trimestrales para ayudarnos a conocernos mejor!</p>
                     </div>
                 </section>
-                <section class="col-4 col-12-narrower">
+                <section class="col-3 col-12-narrower">
                     <div class="box highlight">
                         <i class="icon solid major fa-calendar-alt"></i>
                         <h3>Reuniones de la HOA</h3>
                         <p>Mensajes periódicos, votaciones y asuntos financieros se discuten. Por favor, únase a nosotros para tomar decisiones y mejorar nuestro vecindario.</p>
                     </div>
                 </section>
-                <section class="col-4 col-12-narrower">
+                <section class="col-3 col-12-narrower">
                     <div class="box highlight">
                         <i class="icon solid major fa-handshake"></i>
                         <h3>Trabajando Juntos</h3>
                         <p>Muchas manos hacen el trabajo ligero. Nuestro objetivo es ayudarnos mutuamente adoptando un espíritu de amabilidad, amor y respeto mutuo.</p>
+                    </div>
+                </section>
+                <section class="col-3 col-12-narrower">
+                    <div class="box highlight">
+                        <i class="icon solid major fa-newspaper"></i>
+                        <h3>Boletines</h3>
+                        <p>Obtenga información sobre el vecindario, eventos y reuniones sociales. Manténgase informado y siéntase libre de presentar sus ideas.</p>
                     </div>
                 </section>
         </div>
@@ -104,17 +113,33 @@
                 <div class="row">
             <section class="col-6 col-12-narrower">
     <div class="box post">
-        <a href="/es/posts/potluck/" class="image left"><img src="/images/potluck-flyer.jpeg" alt="" /></a>
+        <a href="/es/posts/hoa-meeting/" class="image left"><img src="/images/3-meet622.jpg" alt="" /></a>
         <div class="inner">
-            <h3><a href="/es/posts/potluck/">Comida Comunitaria del Vecindario</a></h3>
+            <h3><a href="/es/posts/hoa-meeting/">Reunión de HOA el 22 de junio de 2024</a></h3>
             
             <p>
-                Sábado 30 de marzo de 2024 ¡ven a comer con tus vecinos! Trae tu plato internacional o americano favorito y disfruta de un tiempo de juegos y conversación mientras conoces a tus vecinos.
+                ¡Fue una gran asistencia! Gracias a todos por venir.
+Noticias del Vecindario, Finanzas y Recompensas!! 
             </p>
         </div>
     </div>
 </section>
 <section class="col-6 col-12-narrower">
+    <div class="box post">
+        <a href="/es/posts/potluck/" class="image left"><img src="/images/IMG_1363.jpeg" alt="" /></a>
+        <div class="inner">
+            <h3><a href="/es/posts/potluck/">Comida Comunitaria del Vecindario</a></h3>
+            
+            <p>
+                Sábado 30 de marzo de 2024¡fue un momento genial! ¡Mira nuestros momentos! :-)&quot;
+Fiesta de Barrio 2024 
+            </p>
+        </div>
+    </div>
+</section>
+</div>
+                <div class="row">
+            <section class="col-6 col-12-narrower">
     <div class="box post">
         <a href="/es/posts/block-party/" class="image left"><img src="/images/bbq20231.jpeg" alt="" /></a>
         <div class="inner">
@@ -126,9 +151,7 @@
         </div>
     </div>
 </section>
-</div>
-                <div class="row">
-            <section class="col-6 col-12-narrower">
+<section class="col-6 col-12-narrower">
     <div class="box post">
         <a href="/es/posts/over-the-years/" class="image left"><img src="/album/5PLANNING.jpg" alt="" /></a>
         <div class="inner">
@@ -141,7 +164,7 @@ Nuestra Señal A lo largo de los Años
         </div>
     </div>
 </section>
-
+</div>
     </div>
 </section>
 <section id="cta" class="wrapper style3">
