--- a/public/es/meet-the-board/index.html
+++ b/public/es/meet-the-board/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <meta property="og:title" content="Conozca la Junta" />
-<meta property="og:description" content="Miembros Activos de la Junta 2023-2024" />
+<meta property="og:description" content="Miembros Activos de la Junta 2024-2025" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://localhost:1313/es/meet-the-board/" /><meta property="article:section" content="" />
 
@@ -55,6 +55,8 @@
                 <li class="">
                     <a href="/es/documents/">Documentos</a>
                 <li class="">
+                    <a href="/es/newsletters/">Newsletters</a>
+                <li class="">
                     <a href="/es/faq/">Preguntas Frecuentes</a>
         </ul>
     </nav>
@@ -82,12 +84,12 @@
                                 <article>
 <header>
     <h2>Conozca la Junta</h2>
-    <p>Miembros Activos de la Junta 2023-2024</p>
+    <p>Miembros Activos de la Junta 2024-2025</p>
     
     <ul class="tags"><li><a href="/es/tags/presidente/">Presidente</a><li><a href="/es/tags/secretario/">Secretario</a><li><a href="/es/tags/tesorero/">Tesorero</a>
 </ul>
 
-</header><h3 id="presidente">Presidente</h3>
+</header><h2 id="presidente">Presidente</h2>
 
 
 <a href="/images/president2324.jpeg" target="_blank">
@@ -97,28 +99,45 @@
 
 <h4 id="dwayne-m">Dwayne M.</h4>
 <p>Correo de contacto: <a href="mailto:president@cambridgevillagehoa.com">president@cambridgevillagehoa.com</a></p>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<h3 id="secretario">Secretario</h3>
+<h2 id="vice-presidente">Vice Presidente</h2>
 
 
 <a href="/images/ebonyG.jpg" target="_blank">
-    <img src="/images/ebonyG.jpg" alt="Miembro de la Junta" width="20%" />
+    <img src="/images/ebonyG.jpg" alt="Board Member" width="20%" />
+</a>
+
+
+<p>Contact Email: <a href="mailto:vicepresident@cambridgevillagehoa.com">vicepresident@cambridgevillagehoa.com</a></p>
+<h2 id="secretario">Secretario</h2>
+
+
+<a href="/images/anapic.jpg" target="_blank">
+    <img src="/images/anapic.jpg" alt="Miembro de la Junta" width="20%" />
 </a>
 
 
 <h4 id="ebony-g">Ebony G.</h4>
 <p>Correo de contacto: <a href="mailto:secretary@cambridgevillagehoa.com">secretary@cambridgevillagehoa.com</a></p>
-<h3 id="tesorero">Tesorero</h3>
+<h2 id="tesorero">Tesorero</h2>
 
 
-<a href="/images/woseneT.jpg" target="_blank">
-    <img src="/images/woseneT.jpg" alt="Miembro de la Junta" width="20%" />
+<a href="/images/placeholder-person.jpg" target="_blank">
+    <img src="/images/placeholder-person.jpg" alt="Board Member" width="20%" />
 </a>
 
 
-<h4 id="wosene-s">Wosene S.</h4>
+<h4 id="fetcha-d">Fetcha D.</h4>
 <p>Correo de contacto: <a href="mailto:treasurer@cambridgevillagehoa.com">treasurer@cambridgevillagehoa.com</a></p>
+<h2 id="director">Director</h2>
+
+
+<a href="/images/placeholder-person.jpg" target="_blank">
+    <img src="/images/placeholder-person.jpg" alt="Board Member" width="20%" />
+</a>
+
+
+<h2 id="vacante">Vacante</h2>
+<p>Correo de contacto: <a href="mailto:director@cambridgevillagehoa.com">director@cambridgevillagehoa.com</a></p>
 
 
                                 </article>
