--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -54,6 +54,8 @@
                     <a href="/documents/">Documents</a>
                 <li class="">
                     <a href="/meet-the-board/">Meet the Board</a>
+                <li class="">
+                    <a href="/newsletters/">Newsletters</a>
                 <li class="current">
                     <a href="/faq/">FAQ</a>
         </ul>
@@ -117,10 +119,10 @@ A completion and submission of the <strong>CAMBRIDGE VILLAGE - Architectural Sta
 <div class="collapsible">
 
   <details open>
-    <summary>Do I need an approval to paint my home?</summary>
+    <summary>Do I need an approval for the paint color for the exterior of the house?</summary>
     <div class="collapsible-content">
       
-Yes
+Yes. Please, complete and submit the Architectural Standards Manual and Request Form (ARC) along with a sample of the paint color to the HOA board. The ARC Form is located on the <a href="/documents" style="color: #00008b;">Documents page</a>
 
     </div>
 
