--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
                 <li class="">
                     <a href="/meet-the-board/">Meet the Board</a>
                 <li class="">
+                    <a href="/newsletters/">Newsletters</a>
+                <li class="">
                     <a href="/faq/">FAQ</a>
         </ul>
     </nav>
@@ -67,25 +69,32 @@
 <section class="wrapper style1">
     <div class="container">
         <div class="row gtr-200">
-                <section class="col-4 col-12-narrower">
+                <section class="col-3 col-12-narrower">
                     <div class="box highlight">
                         <i class="icon solid major fa-user-friends"></i>
                         <h3>Community Events</h3>
                         <p>Potlucks, games, and community building events in our cul-de-sac. We will have quarterly events to help us get to know each other better!</p>
                     </div>
                 </section>
-                <section class="col-4 col-12-narrower">
+                <section class="col-3 col-12-narrower">
                     <div class="box highlight">
                         <i class="icon solid major fa-calendar-alt"></i>
                         <h3>HOA Meetings</h3>
                         <p>Periodic messages, voting, and financials are discussed. Please join us in making decisions and improving our neighborhood.</p>
                     </div>
                 </section>
-                <section class="col-4 col-12-narrower">
+                <section class="col-3 col-12-narrower">
                     <div class="box highlight">
                         <i class="icon solid major fa-handshake"></i>
                         <h3>Working Together</h3>
                         <p>Many hands make light work. Our goal is to help each other by embracing a spirit of kindness, love, and mutual respect.</p>
+                    </div>
+                </section>
+                <section class="col-3 col-12-narrower">
+                    <div class="box highlight">
+                        <i class="icon solid major fa-newspaper"></i>
+                        <h3>Newsletters</h3>
+                        <p>Get information about the neighborhood, events, and socials. Stay informed and feel free to present your ideas.</p>
                     </div>
                 </section>
         </div>
@@ -104,17 +113,33 @@
                 <div class="row">
             <section class="col-6 col-12-narrower">
     <div class="box post">
-        <a href="/posts/potluck/" class="image left"><img src="/images/potluck-flyer.jpeg" alt="" /></a>
+        <a href="/posts/hoa-meeting/" class="image left"><img src="/images/3-meet622.jpg" alt="" /></a>
         <div class="inner">
-            <h3><a href="/posts/potluck/">Neighborhood Potluck</a></h3>
+            <h3><a href="/posts/hoa-meeting/">HOA Meeting on June 22, 2024</a></h3>
             
             <p>
-                Saturday March 30, 2024 come have a meal with your neighbors! Bring your favorite international or American dish and enjoy a time of games and conversation as you get to know your neighbors!
+                It was a great turn out! Thank you everyone for coming.
+Neighborhood News, Finances, and Rewards!! 
             </p>
         </div>
     </div>
 </section>
 <section class="col-6 col-12-narrower">
+    <div class="box post">
+        <a href="/posts/potluck/" class="image left"><img src="/images/IMG_1363.jpeg" alt="" /></a>
+        <div class="inner">
+            <h3><a href="/posts/potluck/">Neighborhood Potluck</a></h3>
+            
+            <p>
+                Saturday March 30, 2024 was a great time! Look at our moments! :-)
+Neighborhood Block Party 2024 
+            </p>
+        </div>
+    </div>
+</section>
+</div>
+                <div class="row">
+            <section class="col-6 col-12-narrower">
     <div class="box post">
         <a href="/posts/block-party/" class="image left"><img src="/images/bbq20231.jpeg" alt="" /></a>
         <div class="inner">
@@ -126,9 +151,7 @@
         </div>
     </div>
 </section>
-</div>
-                <div class="row">
-            <section class="col-6 col-12-narrower">
+<section class="col-6 col-12-narrower">
     <div class="box post">
         <a href="/posts/over-the-years/" class="image left"><img src="/album/5PLANNING.jpg" alt="" /></a>
         <div class="inner">
@@ -141,7 +164,7 @@ Our Sign Over the Years
         </div>
     </div>
 </section>
-
+</div>
     </div>
 </section>
 <section id="cta" class="wrapper style3">
