--- a/public/meet-the-board/index.html
+++ b/public/meet-the-board/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="/style.css" />
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <meta property="og:title" content="Meet the Board" />
-<meta property="og:description" content="2023-2024 Active Board Members" />
+<meta property="og:description" content="2024-2025 Active Board Members" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://localhost:1313/meet-the-board/" /><meta property="article:section" content="" />
 
@@ -55,6 +55,8 @@
                 <li class="current">
                     <a href="/meet-the-board/">Meet the Board</a>
                 <li class="">
+                    <a href="/newsletters/">Newsletters</a>
+                <li class="">
                     <a href="/faq/">FAQ</a>
         </ul>
     </nav>
@@ -82,9 +84,9 @@
                                 <article>
 <header>
     <h2>Meet the Board</h2>
-    <p>2023-2024 Active Board Members</p>
+    <p>2024-2025 Active Board Members</p>
     
-    <ul class="tags"><li><a href="/tags/president/">President</a><li><a href="/tags/secretary/">Secretary</a><li><a href="/tags/treasurer/">Treasurer</a>
+    <ul class="tags"><li><a href="/tags/president/">President</a><li><a href="/tags/vice-president/">Vice President</a><li><a href="/tags/secretary/">Secretary</a><li><a href="/tags/treasurer/">Treasurer</a><li><a href="/tags/director/">Director</a>
 </ul>
 
 </header><h2 id="president">President</h2>
@@ -97,9 +99,7 @@
 
 <h4 id="dwayne-m">Dwayne M.</h4>
 <p>Contact Email: <a href="mailto:president@cambridgevillagehoa.com">president@cambridgevillagehoa.com</a></p>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<h2 id="secretary">Secretary</h2>
+<h2 id="vice-president">Vice President</h2>
 
 
 <a href="/images/ebonyG.jpg" target="_blank">
@@ -108,17 +108,37 @@
 
 
 <h4 id="ebony-g">Ebony G.</h4>
+<p>Contact Email: <a href="mailto:vicepresident@cambridgevillagehoa.com">vicepresident@cambridgevillagehoa.com</a></p>
+<h2 id="secretary">Secretary</h2>
+
+
+<a href="/images/anapic.jpg" target="_blank">
+    <img src="/images/anapic.jpg" alt="Board Member" width="20%" />
+</a>
+
+
+<h4 id="ana-a">Ana A.</h4>
 <p>Contact Email: <a href="mailto:secretary@cambridgevillagehoa.com">secretary@cambridgevillagehoa.com</a></p>
 <h2 id="treasurer">Treasurer</h2>
 
 
-<a href="/images/woseneT.jpg" target="_blank">
-    <img src="/images/woseneT.jpg" alt="Board Member" width="20%" />
+<a href="/images/placeholder-person.jpg" target="_blank">
+    <img src="/images/placeholder-person.jpg" alt="Board Member" width="20%" />
 </a>
 
 
-<h4 id="wosene-s">Wosene S.</h4>
+<h4 id="fetcha-d">Fetcha D.</h4>
 <p>Contact Email: <a href="mailto:treasurer@cambridgevillagehoa.com">treasurer@cambridgevillagehoa.com</a></p>
+<h2 id="director">Director</h2>
+
+
+<a href="/images/placeholder-person.jpg" target="_blank">
+    <img src="/images/placeholder-person.jpg" alt="Board Member" width="20%" />
+</a>
+
+
+<h4 id="vacant">Vacant</h4>
+<p>Contact Email: <a href="mailto:director@cambridgevillagehoa.com">director@cambridgevillagehoa.com</a></p>
 
 
                                 </article>
