--- a/public/es/faq/index.html
+++ b/public/es/faq/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="es">
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
 
 <title>Preguntas Frecuentes | Cambridge Village HOA</title>
 <meta charset="utf-8" />
@@ -10,7 +10,7 @@
 <meta property="og:title" content="Preguntas Frecuentes" />
 <meta property="og:description" content="Preguntas frecuentes" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/es/faq/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://cambridgevillagehoa.com/es/faq/" /><meta property="article:section" content="" />
 
 
 
@@ -40,7 +40,7 @@
             </a>
         </li></ul>
 </div>
-<h1><a href="http://localhost:1313/" id="logo">
+<h1><a href="https://cambridgevillagehoa.com/" id="logo">
         Cambridge Village HOA
     </a></h1>
 
@@ -54,6 +54,8 @@
                     <a href="/es/meet-the-board/">Conozca la Junta</a>
                 <li class="">
                     <a href="/es/documents/">Documentos</a>
+                <li class="">
+                    <a href="/es/newsletters/">Newsletters</a>
                 <li class="current">
                     <a href="/es/faq/">Preguntas Frecuentes</a>
         </ul>
