--- a/public/es/meet-the-board/index.html
+++ b/public/es/meet-the-board/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="es">
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
 
 <title>Conozca la Junta | Cambridge Village HOA</title>
 <meta charset="utf-8" />
@@ -10,7 +10,7 @@
 <meta property="og:title" content="Conozca la Junta" />
 <meta property="og:description" content="Miembros Activos de la Junta 2024-2025" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/es/meet-the-board/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://cambridgevillagehoa.com/es/meet-the-board/" /><meta property="article:section" content="" />
 
 
 
@@ -40,7 +40,7 @@
             </a>
         </li></ul>
 </div>
-<h1><a href="http://localhost:1313/" id="logo">
+<h1><a href="https://cambridgevillagehoa.com/" id="logo">
         Cambridge Village HOA
     </a></h1>
 
