board pic update

--- a/public/meet-the-board/index.html
+++ b/public/meet-the-board/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
+    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 
 <title>Meet the Board | Cambridge Village HOA</title>
 <meta charset="utf-8" />
@@ -10,7 +10,7 @@
 <meta property="og:title" content="Meet the Board" />
 <meta property="og:description" content="2024-2025 Active Board Members" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://cambridgevillagehoa.com/meet-the-board/" /><meta property="article:section" content="" />
+<meta property="og:url" content="http://localhost:1313/meet-the-board/" /><meta property="article:section" content="" />
 
 
 
@@ -40,7 +40,7 @@
             </a>
         </li></ul>
 </div>
-<h1><a href="https://cambridgevillagehoa.com/" id="logo">
+<h1><a href="http://localhost:1313/" id="logo">
         Cambridge Village HOA
     </a></h1>
 
@@ -122,8 +122,8 @@
 <h2 id="treasurer">Treasurer</h2>
 
 
-<a href="/images/placeholder-person.jpg" target="_blank">
-    <img src="/images/placeholder-person.jpg" alt="Board Member" width="20%" />
+<a href="/images/fletch.jpg" target="_blank">
+    <img src="/images/fletch.jpg" alt="Board Member" width="20%" />
 </a>
 
 
