--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
+    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 
 <title>Documents | Cambridge Village HOA</title>
 <meta charset="utf-8" />
@@ -10,7 +10,7 @@
 <meta property="og:title" content="Documents" />
 <meta property="og:description" content="Download any documents needed below." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://cambridgevillagehoa.com/documents/" /><meta property="article:section" content="" />
+<meta property="og:url" content="http://localhost:1313/documents/" /><meta property="article:section" content="" />
 
 
 
@@ -40,7 +40,7 @@
             </a>
         </li></ul>
 </div>
-<h1><a href="https://cambridgevillagehoa.com/" id="logo">
+<h1><a href="http://localhost:1313/" id="logo">
         Cambridge Village HOA
     </a></h1>
 
