--- a/public/es/index.html
+++ b/public/es/index.html
@@ -119,7 +119,7 @@
             
             <p>
                 ¡Fue una gran asistencia! Gracias a todos por venir.
-Noticias del Vecindario, Finanzas y Recompensas!! 
+Noticias del Vecindario, Finanzas y Recompensas!! Heroes Award
             </p>
         </div>
     </div>
