--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
             
             <p>
                 It was a great turn out! Thank you everyone for coming.
-Neighborhood News, Finances, and Rewards!! 
+Neighborhood News, Finances, and Rewards!! Heroes Award
             </p>
         </div>
     </div>
